--- a/22718451_NguyenHoangKhang_Tuan01/package.json
+++ b/22718451_NguyenHoangKhang_Tuan01/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start:build": "node dist/index.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
