--- a/22718451_NguyenHoangKhang_Tuan04/package.json
+++ b/22718451_NguyenHoangKhang_Tuan04/package.json
@@ -8,11 +8,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "expo": "~53.0.22",
+    "expo-asset": "^12.0.8",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.6",
-    "@expo/vector-icons": "^14.1.0",
     "react-native-paper": "4.9.2"
   },
   "devDependencies": {
